--- a/app/src/main/res/layout/fragment_wall.xml
+++ b/app/src/main/res/layout/fragment_wall.xml
@@ -4,7 +4,8 @@
     android:id="@+id/fragment_wall_layout_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.svintsov.vk.wall.WallFragment">
+    tools:context="com.svintsov.vk.wall.WallFragment"
+    android:background="@color/colorWhite">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_wall_recycler_view"
