some UI improvements

--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.svintsov.vk.wall.PostFragment"
-    android:background="@color/colorWhite"
+    android:background="@color/colorLightGray"
     android:clickable="true"
     android:padding="16dp">
 
