--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#000000</color>
 
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorLightGray">#e1e1e1</color>
+    <color name="colorGray">#b4b4b4</color>
 </resources>
