--- a/app/src/main/res/layout-land/activity_wall.xml
+++ b/app/src/main/res/layout-land/activity_wall.xml
@@ -38,7 +38,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Id"
-                        android:inputType="number" />
+                        android:inputType="number"
+                        android:imeOptions="actionDone"/>
                 </android.support.design.widget.TextInputLayout>
                 <Button
                     android:layout_width="wrap_content"
@@ -66,11 +67,12 @@
         android:layout_height="match_parent"
         android:background="@color/colorAccent"/>
 
-    <FrameLayout
+    <ScrollView
         android:id="@+id/activity_wall_layout_post"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="4">
-    </FrameLayout>
+        android:layout_weight="4"
+        android:fillViewport="true">
+    </ScrollView>
 
 </LinearLayout>
